# GLMiniUI

./: CMakeLists.txt  readme.md  vcpkg-configuration.json  vcpkg.json
examples/: demo.cpp
include/: GLMiniUI  buttons.hpp  constants.hpp  globals.hpp  label.hpp  utils.hpp
source/: buttons.cpp  globals.cpp  label.cpp  utils.cpp
